<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/box_list_ver_tx_margin"
        android:layout_marginVertical="5dp"
        android:background="@drawable/box_list_shape_round"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/box_list_ver_tx_margin"
        >


        <TextView
            android:id="@+id/prodlist_lb_DT_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DT_IO"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/box_list_ver_tx_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <TextView
            android:id="@+id/prodlist_lb_LN_PARTNER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/box_list_ver_tx_margin"
            android:text="@string/LN_PARTNER"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/prodlist_lb_DT_ID"
            app:layout_constraintStart_toStartOf="@id/prodlist_lb_DT_ID"
            app:layout_constraintTop_toBottomOf="@id/prodlist_lb_DT_ID" />

        <TextView
            android:id="@+id/prodlist_lb_NO_IO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/box_list_ver_tx_margin"
            android:text="@string/NO_IO"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/prodlist_lb_DT_ID"
            app:layout_constraintStart_toStartOf="@id/prodlist_lb_DT_ID"
            app:layout_constraintTop_toBottomOf="@id/prodlist_lb_LN_PARTNER" />


        <TextView
            android:id="@+id/prodlist_tx_DT_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20230110"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/prodlist_lb_DT_ID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/prodlist_lb_DT_ID" />

        <TextView
            android:id="@+id/prodlist_tx_LN_PARTNER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(주)평화 발레오"
            android:textColor="@color/black"
            android:maxLength="15"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="@+id/prodlist_lb_LN_PARTNER"
            app:layout_constraintEnd_toEndOf="@+id/prodlist_tx_DT_ID"
            app:layout_constraintStart_toStartOf="@+id/prodlist_tx_DT_ID"
            app:layout_constraintTop_toTopOf="@+id/prodlist_lb_LN_PARTNER" />

        <TextView
            android:id="@+id/prodlist_tx_NO_IO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="INZ20230100038"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/prodlist_lb_NO_IO"
            app:layout_constraintEnd_toEndOf="@+id/prodlist_tx_LN_PARTNER"
            app:layout_constraintStart_toStartOf="@+id/prodlist_tx_LN_PARTNER"
            app:layout_constraintTop_toTopOf="@+id/prodlist_lb_NO_IO" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>