<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.moveWH.MoveWHFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/bg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moveWH_home_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:paddingVertical="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/home_btn_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:background="@drawable/house_solid2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/moveWH_tx_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/moveWH_Prod"
            android:textColor="@color/white"
            android:textSize="@dimen/h5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/moveWH_tx_table_nm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/table_border_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        android:gravity="center"
        android:text="가상 창고 물품 리스트"
        android:fontFamily="@font/nanumsquareneo_deb"
        android:textSize="@dimen/h5"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/moveWH_tb_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bd_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moveWH_tx_table_nm">


        <TextView
            android:id="@+id/moveWH_th_cdItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_border_top_bottom"
            android:fontFamily="@font/nanumsquareneo_deb"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/CD_ITEM"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/moveWH_th_qt_ld"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/moveWH_th_qt_ld"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_border_top_bottom"
            android:fontFamily="@font/nanumsquareneo_deb"
            android:gravity="center"
            android:padding="10dp"
            android:text="저장 수량"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/moveWH_th_cdItem"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moveWH_tb_row">


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movingList_rv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/rv_movewh_list"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/moveWH_bt_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/SAVE_ITEM"
            android:textSize="@dimen/h5"
            android:fontFamily="@font/nanumsquareneo_deb"
            android:background="@drawable/table_border"
            android:visibility="invisible"
            android:layout_marginEnd="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/moveWH_bt_out"
            android:gravity="center"
            />

        <Button
            android:id="@+id/moveWH_bt_out"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/OUT_ITEM"
            android:textSize="@dimen/h5"
            android:visibility="invisible"
            android:fontFamily="@font/nanumsquareneo_deb"
            android:background="@drawable/table_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/moveWH_bt_save"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>