<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.move.MoveProdDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/bg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moveProdDetail_home_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:paddingVertical="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/home_btn_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:background="@drawable/house_solid2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>



        <TextView
            android:id="@+id/moveProdDetail_tx_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="이동 지시 번호"
            android:textColor="@color/white"
            android:textSize="@dimen/h5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_btn_img"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/moveProdDetail_tb_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bd_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">


        <TextView
            android:id="@+id/moveProdDetail_th_cdItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_border_bottom"
            android:fontFamily="@font/nanumsquareneo_deb"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/CD_ITEM"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/moveProdDetail_qt_io"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/moveProdDetail_qt_io"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_border_bottom"
            android:fontFamily="@font/nanumsquareneo_deb"
            android:gravity="center"
            android:padding="10dp"
            android:text="지시 수량"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/moveProdDetail_th_qt_ld"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/moveProdDetail_th_cdItem"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/moveProdDetail_th_qt_ld"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_border_bottom"
            android:fontFamily="@font/nanumsquareneo_deb"
            android:gravity="center"
            android:padding="10dp"
            android:text="이동 수량"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/moveProdDetail_qt_io"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/movingList_ly_bt_list"
        app:layout_constraintTop_toBottomOf="@id/moveProdDetail_tb_row">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movingList_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/rv_movedetail_list"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movingList_ly_bt_list"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <Button
            android:id="@+id/moveProdDetail_bt_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="스캔"
            android:textSize="@dimen/h5"
            android:fontFamily="@font/nanumsquareneo_deb"
            android:background="@drawable/table_border_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/moveProdDetail_bt_out"
            android:gravity="center"
            />

        <Button
            android:id="@+id/moveProdDetail_bt_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/SAVE_ITEM"
            android:textSize="@dimen/h5"
            android:fontFamily="@font/nanumsquareneo_deb"
            android:background="@drawable/table_border"
            android:layout_marginEnd="2dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/moveProdDetail_bt_out"
            android:gravity="center"
            />

        <Button
            android:id="@+id/moveProdDetail_bt_out"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/OUT_ITEM"
            android:textSize="@dimen/h5"
            android:fontFamily="@font/nanumsquareneo_deb"
            android:background="@drawable/table_border_state"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/moveProdDetail_bt_save"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>